fix: add overflow hidden to meetup card

--- a/angular-meetup/src/app/meetup/meetup.component.scss
+++ b/angular-meetup/src/app/meetup/meetup.component.scss
@@ -4,6 +4,7 @@
   background: var(--default-color, #2c2c2c);
   padding: 15px 20px;
   margin-top: 30px;
+  overflow: hidden;
 }
 
 .mat-mdc-card-header {
